# Duplom_magister

./: .env  README.md  docker-compose.yml
Commands/Linux/: init.sh  install.sh  start.sh  stop.sh
Commands/Windows/: init.bat  restart.bat  start.bat  stop.bat
Components/FleetDM/Certificates/: server.crt  server.key
Components/FleetDM/Config/: fleet.yml
Components/MySQL/: init.sql
Components/Nginx/: default.conf
Components/PHP/: Dockerfile  custom.ini  setup-laravel.php
Components/Suricata/config/: suricata.yaml
Components/Suricata/logs/: eve.json
Program/: .env  CMakeLists.txt  Dockerfile
Program/include/: Application.hpp
Program/src/: Application.cpp  main.cpp
